# Diagon

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
.github/workflows/: continuous-integration.yaml
src/: api.cpp  diagon.d.ts  input_output_test.cpp  main.cpp  package.json
src/translator/: Factory.cpp
src/translator/flowchart/: Flowchart.cpp
src/translator/graph_undirected/: CMakeLists.txt  GraphUndirected.cpp  GraphUndirected.g4  GraphUndirectedEmpty.cpp
